compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__conditional_compilation__excluded_attribute_syntax.snap
---
source: compiler-core/src/erlang/tests/conditional_compilation.rs
assertion_line: 5
expression: "@target(javascript)\n  pub fn main() { 1 }\n"
---
----- SOURCE CODE
@target(javascript)
  pub fn main() { 1 }


----- COMPILED ERLANG
-module(my@mod).
